welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: not found: value positionFinale
		while(!positionFinale())
                       ^Diagonal:29: error: type mismatch;
 found   : Unit
 required: Int
					y=getMondeHauteur()-1
                                         ^